force-app/main/default/objects/PMC_CPQ_BrazilDiscountApprovalThreshold__mdt/PMC_CPQ_BrazilDiscountApprovalThreshold__mdt.object-meta.xml
<CustomObject>
    <label>Brazil Discount Approval Threshold</label>
    <pluralLabel>Brazil Discount Approval Thresholds</pluralLabel>
</CustomObject>