force-app/main/default/objects/PMC_CPQ_BrazilDiscountApprovalThreshold__mdt/fields/PMC_CPQ_UpperThresholdLevel1__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_UpperThresholdLevel1__c</fullName>
    <description>This field hold upper threshold values less than this value will trigger approval rule</description>
    <label>Upper Threshold Level 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>