force-app/main/default/objects/PMC_CPQ_BrazilDiscountApprovalThreshold__mdt/fields/PMC_CPQ_UpperThresholdLevel2__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_UpperThresholdLevel2__c</fullName>
    <label>Upper Threshold Level 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>